@@ -17,18 +17,12 @@ import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
-/**
- * Serviço de integração com a API do Open Library.
- * Busca livros, capa, autor, número de páginas, ano.
- * NÃO requer API key.
- * Exceções lançadas aqui (camada service) e tratadas na view.
- */
+
 public class OpenLibraryService {
 
     private static final String SEARCH_URL = "https://openlibrary.org/search.json";
     private static final String COVER_URL  = "https://covers.openlibrary.org/b/id/";
 
-    // ── Busca livros pelo título (retorna lista de candidatos) ───────────
     public List<ResultadoBuscaLivro> buscarLivro(String termo)
             throws ArquivoNaoEncontradoException, IOException, DadosInvalidosException {
 
@@ -36,9 +30,6 @@ public class OpenLibraryService {
             throw new DadosInvalidosException("O termo de busca não pode ser vazio.");
 
         String encoded = URLEncoder.encode(termo.trim(), StandardCharsets.UTF_8);
-        // Parâmetro 'fields' é necessário desde 2025 para garantir que os campos
-        // que precisamos (autor, ano, capa) vêm na resposta. O parâmetro 'language'
-        // usado antes não existe nessa API e fazia a busca falhar silenciosamente.
         String url = SEARCH_URL + "?q=" + encoded
                    + "&fields=key,title,author_name,first_publish_year,cover_i"
                    + "&limit=8";
@@ -70,7 +61,6 @@ public class OpenLibraryService {
         return resultados;
     }
 
-    // ── Importa detalhes completos de um livro para o objeto Livro ───────
     public void importarLivroCompleto(Livro livro, ResultadoBuscaLivro selecionado)
             throws ArquivoNaoEncontradoException, IOException {
 
@@ -79,7 +69,6 @@ public class OpenLibraryService {
         if (selecionado.ano > 0) livro.setAnoLancamento(selecionado.ano);
         if (!selecionado.capa.isEmpty()) livro.setImagem(selecionado.capa);
 
-        // Busca detalhes extras (gênero/páginas) via endpoint /works
         if (!selecionado.workKey.isEmpty()) {
             try {
                 String url = "https://openlibrary.org" + selecionado.workKey + ".json";
@@ -90,25 +79,16 @@ public class OpenLibraryService {
                 if (subjects != null && subjects.length() > 0)
                     livro.setGenero(subjects.getString(0));
 
-                Object desc = json.opt("description");
-                String sinopse = "";
-                if (desc instanceof String) sinopse = (String) desc;
-                else if (desc instanceof JSONObject) sinopse = ((JSONObject) desc).optString("value", "");
-
-                // Open Library não tem link de leitura direto público —
-                // usamos o link da própria página do livro como referência
                 livro.setLink("https://openlibrary.org" + selecionado.workKey);
 
             } catch (Exception ignored) {
-                // Se falhar, mantém os dados básicos já preenchidos
                 livro.setLink("https://openlibrary.org" + selecionado.workKey);
             }
         }
     }
 
-    // ── Requisição HTTP simples ─────────────────────────────────────────
     private String fazerRequisicao(String urlStr) throws IOException {
-        URL url = new URL(urlStr);
+        URL url = java.net.URI.create(urlStr).toURL();
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.setRequestMethod("GET");
         conn.setConnectTimeout(8000);
@@ -127,7 +107,6 @@ public class OpenLibraryService {
         return sb.toString();
     }
 
-    // ── Classe interna: resultado simplificado da busca ─────────────────
     public static class ResultadoBuscaLivro {
         public final String workKey;
         public final String titulo;
